--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -14,6 +16,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
     buildTypes {
@@ -32,6 +38,10 @@ android {
 }
 
 dependencies {
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10"
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.2"
@@ -49,12 +59,6 @@ dependencies {
 
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.retrofit2:converter-gson:2.6.2"
-
-    compileOnly "com.google.auto.value:auto-value-annotations:1.6.3"
-    annotationProcessor "com.google.auto.value:auto-value:1.6.3"
-    compileOnly  "com.ryanharter.auto.value:auto-value-gson-annotations:0.8.0"
-    annotationProcessor "com.ryanharter.auto.value:auto-value-gson:0.8.0"
-    annotationProcessor "com.ryanharter.auto.value:auto-value-parcel:0.2.6"
 
     testImplementation "junit:junit:4.13.1"
     testImplementation "org.mockito:mockito-android:3.4.6"
