--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
+        android:name=".WeatherApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherChallenge">
+        <activity android:name=".forecast.WeatherForecastActivity"></activity>
         <activity
-            android:name="com.example.androidchallenge.MainActivity"
+            android:name=".weather.WeatherActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.WeatherChallenge.NoActionBar">
             <intent-filter>
