--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    // TEMP upgrade all dependencies
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10"
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.2"
@@ -45,16 +46,17 @@ dependencies {
     implementation "com.squareup.picasso:picasso:2.5.2"
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.19"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1" // TEMP remove
 
+    // TEMP include something more modern instead of GSON - probably jackson makes sense
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.retrofit2:converter-gson:2.6.2"
 
     compileOnly "com.google.auto.value:auto-value-annotations:1.6.3"
-    annotationProcessor "com.google.auto.value:auto-value:1.6.3"
-    compileOnly  "com.ryanharter.auto.value:auto-value-gson-annotations:0.8.0"
-    annotationProcessor "com.ryanharter.auto.value:auto-value-gson:0.8.0"
-    annotationProcessor "com.ryanharter.auto.value:auto-value-parcel:0.2.6"
+    annotationProcessor "com.google.auto.value:auto-value:1.6.3" // TEMP remove
+    compileOnly  "com.ryanharter.auto.value:auto-value-gson-annotations:0.8.0" // TEMP remove
+    annotationProcessor "com.ryanharter.auto.value:auto-value-gson:0.8.0" // TEMP remove
+    annotationProcessor "com.ryanharter.auto.value:auto-value-parcel:0.2.6" // TEMP remove
 
     testImplementation "junit:junit:4.13.1"
     testImplementation "org.mockito:mockito-android:3.4.6"
