--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- TEMP resolve these warnings - maybe set minimum SDK to 24 -->
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
